k8s 部署文件（腾讯云）（2023-05-11更新）/all-0511/Gitlab/gitlab-ce/ingress-gitlab.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
#  annotations:
#    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: gitlab
  rules:
  - host: gitlab.yangkun.com
    http:
      paths:
      - path: /
        backend:
          service: 
            name: my-gitlab-gitlab-ce
            port:
              number: 80
        pathType: Prefix
